Allow to create/update course with competencies together
