# app/controllers/api/v1/courses_controller.rb
@@ -4,26 +4,20 @@ class Api::V1::CoursesController < ActionController::API
   def index
     courses = Course.includes(:author, :competencies).order(:title)
 
-    render json: courses.as_json(
-      only: %i(id title description created_at updated_at),
-      include: %i(author competencies)
-    )
+    render json: json(courses)
   end
 
   def show
     course = Course.includes(:author, :competencies).find(params[:id])
 
-    render json: course.as_json(
-      only: %i(id title description created_at updated_at),
-      include: %i(author competencies)
-    )
+    render json: json(course)
   end
 
   def create
     course = Course.new(course_params)
 
     if course.save
-      render json: course, status: :created
+      render json: json(course), status: :created
     else
       render json: { errors: course.errors }, status: :unprocessable_entity
     end
@@ -31,7 +25,7 @@ class Api::V1::CoursesController < ActionController::API
 
   def update
     if @course.update(course_params)
-      render json: @course
+      render json: json(@course)
     else
       render json: { errors: @course.errors }, status: :unprocessable_entity
     end
@@ -45,11 +39,18 @@ class Api::V1::CoursesController < ActionController::API
 
   private
 
+  def json(relation)
+    relation.as_json(
+      only: %i(id title description created_at updated_at),
+      include: %i(author competencies)
+    )
+  end
+
   def set_course
     @course = Course.find(params[:id])
   end
 
   def course_params
-    params.require(:course).permit(:title, :description, :author_id)
+    params.permit(:title, :description, :author_id, competency_ids: [])
   end
 end
